--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
     <div class="container">
+
+        <div class="card-container">
+            <div class="front">
+                <div class="image">
+                    <img src="image/sc.png" alt="">
+                    <img src="image/visa.png" alt="">
+                </div>
+                <div class="card-number-box">################</div>
+                <div class="flexbox">
+                    <div class="box">
+                        <span>card holder</span>
+                        <div class="card-holder-name">full name</div>
+                    </div>
+                    <div class="box">
+                        <span>expires</span>
+                        <div class="expiration">
+                            <span class="exp-month">mm</span>
+                            <span class="exp-year">yy</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="back">
+                <div class="stripe"></div>
+                <div class="box">
+                    <span>cvv</span>
+                    <div class="cvv-box"></div>
+                    <img src="image/visa.png" alt="">
+                </div>
+            </div>
+    
+        </div>
         <form action="">
             <div class="inputBox">
                 <span>card number</span>
@@ -15,11 +49,11 @@
             </div>
             <div class="inputBox">
                 <span>card holder</span>
-                <input type="text"  class="card-holder-input">
+                <input type="text" class="card-holder-input">
             </div>
-            <div class="flexBox">
+            <div class="flexbox">
                 <div class="inputBox">
-                    <span>expiratation mm</span>
+                    <span>expiration mm</span>
                     <select name="" id="" class="month-input">
                         <option value="month" selected disabled>month</option>
                         <option value="01">01</option>
@@ -36,31 +70,69 @@
                         <option value="12">12</option>
                     </select>
                 </div>
-            </div>
-            <div class="inputBox">
-                <span>expiratation yy</span>
-                <select name="" id="" class="year-input">
-                    <option value="year" selected disabled>year</option>
-                    <option value="2024">2024</option>
-                    <option value="2025">2025</option>
-                    <option value="2026">2026</option>
-                    <option value="2027">2027</option>
-                    <option value="2028">2028</option>
-                    <option value="2029">2029</option>
-                    <option value="2030">2030</option>
-                    <option value="2031">2031</option>
-                    <option value="2032">2032</option>
-                    <option value="2033">2033</option>
-                    <option value="2034">2034</option>
-                </select>
-            <div class="inputbox">
-                <span>cvv</span>
-                <input type="text" maxlength="4" class="cvv-input">
+                <div class="inputBox">
+                    <span>expiration yy</span>
+                    <select name="" id="" class="year-input">
+                        <option value="year" selected disabled>year</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                        <option value="2026">2026</option>
+                        <option value="2027">2027</option>
+                        <option value="2028">2028</option>
+                        <option value="2029">2029</option>
+                        <option value="2030">2030</option>
+                        <option value="2031">2031</option>
+                        <option value="2032">2032</option>
+                        <option value="2033">2033</option>
+                        <option value="2034">2034</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <span>cvv</span>
+                    <input type="text" maxlength="4" class="cvv-input">
+                </div>
             </div>
             <input type="submit" value="submit" class="submit-btn">
         </form>
-    </div>
+    </div>    
 
+    <script>
+        document.querySelector('.card-number-input').oninput = () =>{
+            document.querySelector('.card-number-box').innerText=document.querySelector('.card-number-input').value;
+        }
+
+
+        document.querySelector('.card-holder-input').oninput = () =>{
+            document.querySelector('.card-holder-name').innerText=document.querySelector('.card-holder-input').value;
+        }
+
+
+        document.querySelector('.month-input').oninput = () =>{
+            document.querySelector('.exp-month').innerText=document.querySelector('.month-input').value;
+        }
+
+
+        document.querySelector('.year-input').oninput = () =>{
+            document.querySelector('.exp-year').innerText=document.querySelector('.year-input').value;
+        }
+
+
+        document.querySelector('.cvv-input').onmouseenter = () =>{
+            document.querySelector('.front').style.transform='perspective(1000px) rotateY(-180deg)';
+            document.querySelector('.back').style.transform='perspective(1000px) rotateY(0deg)';
+        }
+
+
+        document.querySelector('.cvv-input').onmouseleave = () =>{
+            document.querySelector('.front').style.transform='perspective(1000px) rotateY(0deg)';
+            document.querySelector('.back').style.transform='perspective(1000px) rotateY(180deg)';
+        }
+
+
+        document.querySelector('.cvv-input').oninput = () =>{
+            document.querySelector('.cvv-box').innerText=document.querySelector('.cvv-input').value;
+        }
+    </script>
 
 
 </body>
